nueva funcionlidad - clientes con enlace magico para creacion autonoma de los mismos
